--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -16,7 +16,7 @@
   align-items: center;
 }
 
-.logo {
+.logo {;
   font-weight: bold;
   font-size: 24px;
 }
@@ -32,4 +32,15 @@
 .nav-links li {
   cursor: pointer;
   font-weight: 500;
+}
+.logo-img {
+  height: 70px; /* Adjust height as needed */
+  width: auto;
+  object-fit: contain;
+  display: block;
+}
+@media (max-width: 768px) {
+  .logo-img {
+    height: 40px;
+  }
 }
